# resource-lister

./: MANIFEST.in  README.md  pyproject.toml
cfn/: cfn_s3_bucket_master_account.json  master_account_IAM_role.json
docs/: # Resource Lister Cloud 9 Setup Guide.md  cloud_9_setup.md  cloudshell_setup.md  help_guide.md  new_service_config.md
install/: main.py
install/cloud9/: setup.shell  start.shell
install/cloudshell/: setup.shell  start.shell
reference/function_repository/accessanalyzer/: list_analyzers.json  list_findings.json  list_findings_v2.json
reference/function_repository/account/: list_regions.json
reference/function_repository/acm/: list_certificates.json
reference/function_repository/amp/: list_scrapers.json  list_workspaces.json
reference/function_repository/apigateway/: get_rest_apis.json
reference/function_repository/appflow/: list_connectors.json
reference/function_repository/budgets/: budget_describe_budgets.json
reference/function_repository/cleanrooms/: list_collaborations.json
reference/function_repository/cloudformation/: cloudformation_list_stack_sets.json  cloudformation_list_stacks.json
reference/function_repository/cloudfront/: cloudfront_list_distributions.json  cloudfront_list_functions.json
reference/function_repository/cloudtrail/: list_trails.json
reference/function_repository/cloudwatch/: list_dashboards.json  list_metrics.json
reference/function_repository/codecommit/: list_repositories.json
reference/function_repository/dynamodb/: list_tables.json
src/resource_lister/: main.py
(+115 files in other folders)
